# hyperion

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  NOTES.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  artnet.py  pyproject.toml
backend/src/: main.py  mcp_server.py
backend/src/core/: __init__.py  config.py  database.py  dependencies.py  exc.py  redis_db.py  startup.py
backend/src/core/security/: access.py
backend/src/engine/: baker.py
backend/src/models/: __init__.py  accounts.py  fixtures.py  shows.py
backend/src/models/dmx/: __init__.py  cues.py  effects.py  scenes.py
backend/src/routers/: accounts.py  dmx.py  fixtures.py  health_check.py  manufacturer.py  show.py  startup_router.py
backend/src/schemas/: accounts.py  device_management.py  dmx_processor.py  fixtures.py  health_check.py  manufacturer.py  show.py
backend/src/services/: accounts.py  device_management.py  dmx_processor.py  dmx_protocol.py  fixture_service.py  fixtures.py  manufacturers.py  mcp_auth.py  shows.py  startup_procedure.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/assets/js/: script.js
frontend/src/lib/: api.ts
frontend/src/lib/components/dmx/: ChannelStrip.svelte
frontend/src/lib/components/system/: LoginModal.svelte  SetupWizard.svelte
frontend/src/lib/components/ui/: Fader.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/console/: +page.svelte
src/server/: Dockerfile
