[project]
name = "hyperion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
server = [
    "argon2-cffi>=25.1.0",
    "asyncmy>=0.2.10",
    "fastapi[standard]>=0.126.0",
    "orjson>=3.11.5",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
runner = [
    "pyartnet>=2.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
]
